<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.forty.bits</groupId>
    <artifactId>a-bit-of-datastructures-and-problemsolving</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>19</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.0-M1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.3</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --enable-preview
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.array=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.backtrack=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.bitops=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.graph=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.linkedlist=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.queue=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.sorting=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.stack=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.string=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.datastructures.tree=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.competitive.leet.weekly.mayone=ALL-UNNAMED
                        --add-opens
                        a.bit.of.data.structures.and.problem.solving/edu.bit.competitive.microsoft=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
